Suggestions for fixes to PR (collapse filter state in state tree)

--- a/src/components/Filter/FilterGroup.scss
+++ b/src/components/Filter/FilterGroup.scss
@@ -7,6 +7,10 @@
   }
 }
 
+.somethingChecked {
+  color: $color-gray-medium;
+}
+
 .glyph {
   font-size: 0.8em;
   padding-right: 0.5em;
